fix: alignment textBlok

--- a/src/components/storyblok/text-blok/text-blok.module.sass
+++ b/src/components/storyblok/text-blok/text-blok.module.sass
@@ -1,7 +1,7 @@
 .textBlok
   position: relative
   display: flex 
-  align-content: center
+  align-items: center
   justify-content: center
   width: 100%
   padding: 2rem 1rem
